<resources>
    <string name="app_name">La Porra</string>

    <!--TEXTOS DE ERROR-->
    <string name="bitmap_error">Hubo un problema al obtener la foto</string>

    <!--FACEBOOK-->
    <string name="FACEBOOK_APP_ID">1236514053148166</string>
    <string name="fb_login_protocol_scheme">fb1236514053148166</string>

    <!--LOGIN-->
    <string name="login">INICIAR SESIÓN</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register">REGÍSTRATE</string>
    <string name="login_facebook">Iniciar sesión con facebook</string>
    
    <!--REGISTRO-->
    <string name="register_me">REGISTRARME</string>
    <string name="username">Nombre de usuario</string>
    <string name="password_repeat">Repite la contraseña</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="hacer_foto">Hacer Foto</string>
    <string name="choose_photo">Elegir foto</string>

    <!--MAIN-->
    <string name="mis_porras">Mis porras</string>
</resources>
