<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/AppTheme" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_ball"/>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_register"
                    fontPath="fonts/Lato-BlackItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/user_placeholder" />

                <EditText
                    android:id="@+id/edit_email"
                    fontPath="fonts/Lato-LightItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg_edittext_green"
                    android:drawableLeft="@drawable/login_mail"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/edit_username"
                    fontPath="fonts/Lato-LightItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_edittext_green"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/edit_password"
                    fontPath="fonts/Lato-LightItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_edittext_green"
                    android:drawableLeft="@drawable/login_pass"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/edit_password_repeat"
                    fontPath="fonts/Lato-LightItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_edittext_green"
                    android:drawableLeft="@drawable/login_pass"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/password_repeat"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />

                <Button
                    android:id="@+id/button_register"
                    style="?android:attr/borderlessButtonStyle"
                    fontPath="fonts/Lato-BlackItalic.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg_button_green"
                    android:text="@string/register_me"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>